tests/compile/scope_invariance.stderr
error[E0599]: no method named `scope` found for struct `Lua` in the current scope
 --> tests/compile/scope_invariance.rs:9:9
  |
9 |     lua.scope(|scope| {
  |     ----^^^^^ method not found in `Lua`
